--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="mattButton">RECIPE SEARCH PAGE</string>
     <string name="recipeWelcome">Welcome to the Recipe Search Page</string>
     <string name="recipeOnlineText">Online Recipe Searcher</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
