--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,20 @@
     <string name="juhoonButton" translatable="false">COVID-19 CASE DATA</string>
     <string name="nintendoButton" translatable="false">TICKETMASTER EVENT SEARCH</string>
     <string name="mattButton" translatable="false">RECIPE SEARCH PAGE</string>
+
     <string name="title_activity_joke" translatable="false">joke</string>
+
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
     <string name="next" translatable="false">Next</string>
     <string name="previous" translatable="false">Previous</string>
+
+    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
+    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_audio_database_apia" translatable="false">AUDIO_DATABASE_APIa</string>
+
+
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+
+
 </resources>
