--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
 
 
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
-
+    <string name="open" translatable="false">Open</string>
+    <string name="close" translatable="false">Close</string>
 
 
 </resources>
